deploy/k8s/apps/admin-client/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-client
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - admin.deployserver.work
      secretName: admin-client-tls
  rules:
    - host: admin.deployserver.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-client
                port:
                  number: 80
